# NCCABoilerplate

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: README.md  linux-mac.yml  linux.yml  mac.yml  matrix.yml  windows.yml
Bullet/: CMakeLists.txt  README.md  main.cpp
Bullet/manifest/: vcpkg.json
Eigen/: CMakeLists.txt  README.md  main.cpp
Eigen/manifest/: vcpkg.json
GLFWExamples/: CMakeLists.txt  README.md
GLFWExamples/Offline/: CMakeLists.txt  main.cpp
GLFWExamples/Offline/manifest/: vcpkg.json
GLFWExamples/OpenGL2.0/: CMakeLists.txt  main.cpp
GLFWExamples/OpenGL2.0/manifest/: vcpkg.json
GLFWExamples/OpenGLCoreProfile/: CMakeLists.txt
GLFWExamples/OpenGLCoreProfile/manifest/: vcpkg.json
GLFWExamples/OpenGLCoreProfile/src/: GLFunctions.cpp  main.cpp
GTest/: CMakeLists.txt  README.md  main.cpp
MayaAPI/: CMakeLists.txt  README.md
OpenImageIO/: CMakeLists.txt  README.md  main.cpp
SDLExamples/: CMakeLists.txt  README.md
SDLExamples/OpenGL2.0/: CMakeLists.txt  main.cpp
SDLExamples/OpenGL2.0/manifest/: vcpkg.json
SDLExamples/OpenGLCoreProfile/: CMakeLists.txt
SDLExamples/OpenGLCoreProfile/manifest/: vcpkg.json
SDLExamples/OpenGLCoreProfile/src/: GLFunctions.cpp  main.cpp
SDLExamples/PutPixel/: CMakeLists.txt  main.cpp
TBB/: CMakeLists.txt  main.cpp
TBB/manifest/: vcpkg.json
cxxopts/: CMakeLists.txt  main.cpp
fmt/: CMakeLists.txt  README.md  main.cpp
fmt/manifest/: vcpkg.json
glm/: CMakeLists.txt  README.md  main.cpp
glm/manifest/: vcpkg.json
manifest/: vcpkg.json
